[gd_scene load_steps=2 format=3 uid="uid://stat_bar_component"]

[ext_resource type="Script" path="res://ui/components/stat_bar.gd" id="1_script"]

[node name="StatBar" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 28)
size_flags_horizontal = 3
script = ExtResource("1_script")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
text = "Stat:"

[node name="ValueLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
text = "0"
